<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/mensajeBienvenida"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnListaUsuarios"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="clip_horizontal|center|clip_vertical"
                android:layout_marginBottom="16dp"
                android:backgroundTint="#008A53"
                android:text="@string/btnListaUsuarios"
                app:cornerRadius="15dp" />

            <Button
                android:id="@+id/btnBuscadorRegistro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="clip_horizontal|center|clip_vertical"
                android:layout_marginBottom="16dp"
                android:backgroundTint="#008A53"
                android:text="@string/btnBuscadorRegistro"
                app:cornerRadius="15dp" />

            <Button
                android:id="@+id/btnAltaUsuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="clip_horizontal|center|clip_vertical"
                android:layout_marginBottom="16dp"
                android:backgroundTint="#008A53"
                android:text="@string/btnAltaUsuario"
                app:cornerRadius="15dp" />

            <Button
                android:id="@+id/btnAltaIncidencia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="clip_horizontal|center|clip_vertical"
                android:layout_marginBottom="16dp"
                android:backgroundTint="#008A53"
                android:text="@string/btnAltaIncidencia"
                app:cornerRadius="15dp" />

            <Button
                android:id="@+id/btnAltaRegistro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="clip_horizontal|center|clip_vertical"
                android:layout_marginBottom="16dp"
                android:backgroundTint="#008A53"
                android:text="@string/btnAltaRegistro"
                app:cornerRadius="15dp" />

            <Button
                android:id="@+id/btnListaIncidencias"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="clip_horizontal|center|clip_vertical"
                android:layout_marginBottom="16dp"
                android:backgroundTint="#008A53"
                android:text="@string/btnListaIncidencias"
                app:cornerRadius="15dp" />
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>