<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AltaIncidencia">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/formIncidencia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <EditText
                android:id="@+id/etDniIncidencia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@android:drawable/editbox_background_normal"
                android:ems="10"
                android:hint="@string/etDni"
                android:importantForAutofill="no"
                android:inputType="textVisiblePassword|textPersonName"
                android:padding="10dp"
                android:shadowColor="#FFFFFF" />

            <!-- No permitir numeros           android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"-->

            <EditText
                android:id="@+id/etFechaInicio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@android:drawable/editbox_background_normal"
                android:ems="10"
                android:hint="@string/etFechaInicio"
                android:importantForAutofill="no"
                android:inputType="date"
                android:focusable="false"
                android:clickable="true"
                android:longClickable="false"
                android:padding="10dp" />

            <EditText
                android:id="@+id/etFechaFin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@android:drawable/editbox_background_normal"
                android:ems="10"
                android:hint="@string/etFechaFin"
                android:importantForAutofill="no"
                android:inputType="date"
                android:focusable="false"
                android:clickable="true"
                android:longClickable="false"
                android:padding="10dp" />

            <EditText
                android:id="@+id/etObservaciones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@android:drawable/editbox_background_normal"
                android:ems="10"
                android:hint="@string/etObservaciones"
                android:importantForAutofill="no"
                android:inputType="textVisiblePassword|textPersonName"
                android:padding="10dp" />

            <EditText
                android:id="@+id/etDniResponsable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@android:drawable/editbox_background_normal"
                android:ems="10"
                android:hint="@string/etDniResponsable"
                android:importantForAutofill="no"
                android:inputType="textVisiblePassword|textPersonName"
                android:padding="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/tvResuelta"
                    android:textColor="#0C1755"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/cbResuelta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cbResuelta"
                    android:layout_gravity="center"/>


            </LinearLayout>


            <Button
                android:id="@+id/btnInsertarIncidencia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:backgroundTint="#008A53"
                android:text="@string/btnAltaIncidencia"
                app:cornerRadius="15dp" />
        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>