<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AltaRegistro">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/formIncidencia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/etDniRegistroUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:background="@android:drawable/editbox_background_normal"
                    android:ems="10"
                    android:hint="@string/etDni"
                    android:importantForAutofill="no"
                    android:inputType="textVisiblePassword|textPersonName"
                    android:padding="10dp"
                    android:shadowColor="#FFFFFF" />

                <ImageButton
                    android:id="@+id/btnBuscarUsuarioDni"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@android:drawable/ic_search_category_default" />
            </LinearLayout>

            <!-- No permitir numeros           android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"-->


            <TextView
                android:id="@+id/tvDatosUsuarioRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:ems="10"
                android:padding="10dp" />

            <EditText
                android:id="@+id/etNombreRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@android:drawable/editbox_background_normal"
                android:ems="10"
                android:hint="@string/Nombre"
                android:importantForAutofill="no"
                android:inputType="textVisiblePassword|textPersonName"
                android:padding="10dp" />


            <EditText
                android:id="@+id/etFechaRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@android:drawable/editbox_background_normal"
                android:clickable="true"
                android:ems="10"
                android:focusable="false"
                android:hint="@string/etFecha"
                android:importantForAutofill="no"
                android:inputType="date"
                android:longClickable="false"
                android:padding="10dp" />

            <EditText
                android:id="@+id/etDescripcionRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@android:drawable/editbox_background_normal"
                android:ems="10"
                android:hint="@string/descripcion"
                android:importantForAutofill="no"
                android:inputType="textVisiblePassword|textPersonName"
                android:padding="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/TvActivo"
                    android:textColor="#0C1755"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/cbActivo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/cbActivo" />


            </LinearLayout>


            <Button
                android:id="@+id/btnInsertarRegistro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:backgroundTint="#008A53"
                android:text="@string/btnInsertarRegistro"
                app:cornerRadius="15dp" />
        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>